# xingshu

./: .editorconfig  .env.example  .gitignore  AGENTS.md  PRD.md  README.md  SPEC.md
agents/orchestrator/: README.md
agents/specialists/: README.md
apps/desktop-client/: README.md  pyproject.toml
apps/desktop-client/src/xingshu_desktop/: __init__.py  main.py
apps/desktop-client/src/xingshu_desktop/agents/: __init__.py
apps/desktop-client/src/xingshu_desktop/app/: bootstrap.py  runtime.py
apps/desktop-client/src/xingshu_desktop/features/device_control/: __init__.py
apps/desktop-client/src/xingshu_desktop/features/knowledge/: __init__.py
apps/desktop-client/src/xingshu_desktop/features/multimodal/: __init__.py
apps/desktop-client/src/xingshu_desktop/features/plugins/: __init__.py
apps/desktop-client/src/xingshu_desktop/features/productivity/: __init__.py
apps/desktop-client/src/xingshu_desktop/features/security/: __init__.py
apps/desktop-client/src/xingshu_desktop/features/settings/: __init__.py
apps/desktop-client/src/xingshu_desktop/features/sync/: __init__.py
apps/desktop-client/src/xingshu_desktop/plugins/: __init__.py
apps/desktop-client/src/xingshu_desktop/schemas/: __init__.py
apps/desktop-client/tests/: test_bootstrap.py
apps/java-service/: build.gradle.kts  settings.gradle.kts
configs/: agent.rules.toml  app.base.toml  app.local.toml  model.providers.toml
docs/: AGENT_DEV.md  API.md  ARCHITECTURE.md  PLUGIN_DEV.md  ROADMAP.md
plugins/builtin/: README.md
plugins/community/: README.md
scripts/: README.md
skills/: README.md
(+11 files in other folders)
