[project]
name = "xingshu-desktop"
version = "0.1.0"
description = "Desktop client for the Xingshu hybrid AI personal assistant."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "httpx>=0.27.0",
  "ollama>=0.4.7",
  "pydantic>=2.7.0",
  "PyQt6>=6.7.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
xingshu-desktop = "xingshu_desktop.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xingshu_desktop"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true

